--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -100,6 +100,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="40dp"
         android:text="@string/btn_back_login"
+        android:backgroundTint="@color/md_theme_tertiary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_register" />
