--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -7,7 +7,7 @@
     tools:context=".fragments.SongsFragment">
 
     <ImageView
-        android:id="@+id/iv_thumbnail"
+        android:id="@+id/iv_song_thumbnail"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginStart="100dp"
@@ -16,7 +16,8 @@
         android:src="@drawable/ic_action_song"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/song_thumbnail_cont_desc" />
 
     <TextView
         android:id="@+id/tv_song_title"
@@ -26,7 +27,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_song_thumbnail" />
 
     <TextView
         android:id="@+id/tv_song_artist"
@@ -44,7 +45,8 @@
         android:layout_marginStart="32dp"
         android:text="00:00"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar" />
+        app:layout_constraintBottom_toTopOf="@+id/seekBar"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tv_total_time"
@@ -53,7 +55,8 @@
         android:layout_marginEnd="32dp"
         android:text="00:00"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/seekBar"/>
+        app:layout_constraintBottom_toTopOf="@id/seekBar"
+        tools:ignore="HardcodedText" />
 
     <SeekBar
         android:id="@+id/seekBar"
@@ -78,7 +81,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar"
-        android:focusable="true" />
+        android:focusable="true"
+        android:contentDescription="@string/play_btn_cont_desc" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_skip_prev"
@@ -90,7 +94,8 @@
         android:src="@drawable/ic_action_skip_previous"
         app:layout_constraintEnd_toStartOf="@+id/btn_play"
         app:layout_constraintTop_toBottomOf="@+id/seekBar"
-        android:focusable="true" />
+        android:focusable="true"
+        android:contentDescription="@string/skip_to_previous_song_btn_cont_desc" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_skip_next"
@@ -102,6 +107,7 @@
         android:src="@drawable/ic_action_skip_next"
         app:layout_constraintStart_toEndOf="@+id/btn_play"
         app:layout_constraintTop_toBottomOf="@+id/seekBar"
-        android:focusable="true" />
+        android:focusable="true"
+        android:contentDescription="@string/skip_to_next_song_btn_cont_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
