--- a/app/src/main/res/layout/rv_chat_item.xml
+++ b/app/src/main/res/layout/rv_chat_item.xml
@@ -24,6 +24,8 @@
                 android:layout_marginTop="8dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
+                android:ellipsize="marquee"
+                android:maxLines="1"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
